--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -182,6 +182,12 @@ p{
   font-size: 12px;
   line-height: 14px;
 }
+.stat-text-free{
+	position: relative;
+  bottom: 0;
+  font-size: 12px;
+  line-height: 14px;
+}
 .stat-text-noh{
   font-size: 12px;
 }
